[package]
name = "mcdougs"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
scraper = "0.24.0"
url = "2.5.7"
webbrowser = "1.0.6"
